# data-designer-studio

./: .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  start.sh
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  generator.py  jobs.py  logging_config.py  main.py  presets.py  providers.py  schema_spec.py  settings.py  translator.py
backend/data_designer_home/: model_providers.yaml
frontend/: app.js  index.html
presets/: federal.json  financial_services.json  healthcare.json  manufacturing.json  maritime.json  sled.json
tasks/: lessons.md  todo.md
