[project]
name = "data-designer-studio-backend"
version = "0.1.0"
description = "Internal vertical-aware synthetic data generation"
requires-python = ">=3.11"
dependencies = [
    "data-designer>=0.3.0,<0.4.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.3.0"]

[tool.ruff]
line-length = 110
target-version = "py311"
